cabal-version: >= 1.10

name: velma
version: 0.0.0.0
synopsis: TODO
description: TODO TODO

build-type: Simple
category: Distribution
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
    location: https://github.com/tfausak/velma
    type: git

flag pedantic
    default: False
    description: Enables @-Werror@, which turns warnings into errors.
    manual: True

library
    build-depends:
        base >= 4.14.0 && < 4.15
        , Cabal >= 3.2 && < 3.3
        , containers >= 0.6.4 && < 0.7
        , directory >= 1.3.6 && < 1.4
        , filepath >= 1.4.2 && < 1.5
    default-language: Haskell2010
    exposed-modules: Velma
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-implicit-prelude
        -Wno-missing-export-lists
        -Wno-missing-exported-signatures
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe
        -Wno-unsafe
    hs-source-dirs: source/library

executable velma
    build-depends: base, velma
    default-language: Haskell2010
    ghc-options: -rtsopts -threaded
    hs-source-dirs: source/executable
    main-is: Main.hs
